<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.home.HomeFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/kaligologo"
        android:contentDescription="@string/kaligo_logo"
        android:layout_marginEnd="5dp" />
    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/doorsOpenLayout"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <Button
            android:id="@+id/stopButton"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/stopButtonText"
            android:background="@drawable/rounded_corners_red"
            android:textColor="@android:color/background_light"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="5dp" />
        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/startCycleButtonText"
            android:background="@drawable/rounded_corners_green"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/doorsOpenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/logosLayout"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <Button
            android:id="@+id/openFrontDoorButton"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/openBackDoorButtonText"
            android:background="@drawable/rounded_corners_blue"
            android:textColor="@android:color/background_light"
            android:layout_marginEnd="5dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/openBackDoorButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/openFrontDoorButtonText"
            android:background="@drawable/rounded_corners_blue"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/logosLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/macteclogo"
            android:layout_weight=".5"
            android:contentDescription="@string/mactec_logo"
            android:layout_marginEnd="5dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/garmonlogo"
            android:layout_weight=".5"
            android:contentDescription="@string/garmon_logo"
            android:layout_marginStart="5dp" />
    </LinearLayout>
</RelativeLayout>